# TodoApp-poetry

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_main.py  test_todo.py
todo_app/: main.py  todo.py
